//protoc --go_out=. api.proto

// ClientRequest is a request to the server which should either be a 
// ClientWriteRequest or a ClientReplayResuest
message ClientRequest {
	extensions 100 to max;

	enum Type {
		WriteRequest = 1;
		ReplayRequest = 2;
	}

	required Type type = 1;
}

// ClientWriteRequest is a message to the server to persist 
// this message payload
message ClientWriteRequest {
	extend ClientRequest{
		optional ClientWriteRequest request = 100;
	}
	required bytes payload = 1;
}

// ClientReplayRequest is a message to the server to replay the log
message ClientReplayRequest {
	extend ClientRequest{
		optional ClientReplayRequest request = 101;
	}
	//No data here yet
}

// ServerReplayResponse is a servers response to a message from 
// the client
message ServerResponse {
	extensions 100 to max;

	enum Type {
		ReplayResponse = 1;
	}

	enum Status {
		OK = 1;
		Error = 2;
	}

	required Type type = 1;
	required Status status = 2 [default=OK];
	optional string error = 3;
}

// ServerReplayResponse is a message from the server with a 
// number of replayed log entries
message ServerReplayResponse {
	extend ServerResponse {
		optional ServerReplayResponse response = 100;
	}
	required LogEntry entry = 1;
}

// LogEntry is a single entry in the log
message LogEntry {
  required sfixed64 timestamp = 1;
  required bytes payload = 2;
}